[package]
name = "crate-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Hugh"]
description = "A minimal OCI-compatible container runtime in Rust"
license = "MIT"
repository = "https://github.com/HueCodes/Container-runtime-rs"
keywords = ["container", "runtime", "oci", "linux", "namespace"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
# Unix/Linux syscalls
nix = { version = "0.28", features = ["sched", "mount", "signal", "user", "hostname", "fs"] }
libc = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime (for registry pulls)
tokio = { version = "1", features = ["full"] }

# HTTP client (for registry API)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Compression/archive
flate2 = "1"
tar = "0.4"

# OCI spec types
oci-spec = "0.6"

# Content verification
sha2 = "0.10"
hex = "0.4"

# Futures (needed for async)
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# UUID for container IDs
uuid = { version = "1", features = ["v4"] }

# Directories for config/data paths
dirs = "5"

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = "0.19"
rtnetlink = "0.14"
caps = "0.5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "crate"
path = "src/main.rs"
